--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,15 @@
 
 body {
-    background-color: salmon;
+    background-color: lightcyan;
 }
+
+
+
+.no-bullets {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+
+
